--- a/HomNayAnGi/HomNayAnGiAPI/appsettings.json
+++ b/HomNayAnGi/HomNayAnGiAPI/appsettings.json
@@ -14,5 +14,9 @@
     "Issuer": "JWTAuthenticationServer",
     "Audience": "JWTServicePostmanClient",
     "Subject": "JWTServiceAccessToken"
+  },
+  "MailServiceAccount": {
+    "Email": "hieptvhe173252@gmail.com",
+    "Password": "xrub dxja ykrc nwuk"
   }
 }
