--- a/HomNayAnGi/HomNayAnGiApp/appsettings.json
+++ b/HomNayAnGi/HomNayAnGiApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DBContext": "Data Source=36.50.135.145;Initial Catalog=HomNayAnGi;uid=sa;pwd=Tuananh2305@;TrustServerCertificate=True"
+  }
 }
